add codemirror for syntax highlight

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -14,10 +14,12 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.8",
     "@ethersproject/networks": "^5.7.1",
     "@ethersproject/web": "^5.7.1",
     "@heroicons/react": "^2.0.11",
     "@rainbow-me/rainbowkit": "^0.11.0",
+    "@uiw/react-codemirror": "^4.20.2",
     "@uniswap/sdk": "^3.0.3",
     "daisyui": "^2.31.0",
     "ethers": "^5.0.0",
