--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -19,6 +19,8 @@
     "@ethersproject/web": "^5.7.1",
     "@heroicons/react": "^2.0.11",
     "@rainbow-me/rainbowkit": "^0.11.0",
+    "@uiw/codemirror-theme-github": "^4.21.7",
+    "@uiw/codemirror-theme-tokyo-night": "^4.21.7",
     "@uiw/react-codemirror": "^4.20.2",
     "@uniswap/sdk": "^3.0.3",
     "daisyui": "^2.31.0",
